@@ -54,7 +54,8 @@
 # Finally, execute test scenarios using the function test_scenarios
 
 # Concurrent users (these will by multiplied by the number of JMeter servers)
-default_concurrent_users="50 100 150 300 500"
+default_concurrent_users=""
+concurrency=""
 # Application heap Sizes
 default_heap_sizes="2G"
 
@@ -92,6 +93,10 @@ mode=""
 jwt_token_client_secret=""
 jwt_token_user_password=""
 
+# Burst Traffic
+enable_burst=false
+burstTraffic=3000
+
 # Start time of the test
 test_start_time=$(date +%s)
 # Scenario specific counters
@@ -125,7 +130,7 @@ function usage() {
     echo ""
 }
 
-while getopts "c:m:d:w:j:i:e:g:n:s:q:u:t:p:k:v:o:h" opts; do
+while getopts "c:m:d:w:r:j:i:e:g:n:s:q:u:t:p:k:v:b:o:h" opts; do
     case $opts in
     c)
         concurrent_users+=("${OPTARG}")
@@ -138,6 +143,9 @@ while getopts "c:m:d:w:j:i:e:g:n:s:q:u:t:p:k:v:o:h" opts; do
         ;;
     w)
         warm_up_time=${OPTARG}
+        ;;
+    r)
+        concurrency=${OPTARG}
         ;;
     j)
         jmeter_client_heap_size=${OPTARG}
@@ -175,6 +183,9 @@ while getopts "c:m:d:w:j:i:e:g:n:s:q:u:t:p:k:v:o:h" opts; do
     v)
         mode=${OPTARG}
         ;;
+    b)
+        enable_burst=${OPTARG}
+        ;;
     k)
         jwt_token_client_secret=${OPTARG}
         ;;
@@ -192,6 +203,15 @@ done
 # Validate options
 number_regex='^[0-9]+$'
 heap_regex='^[0-9]+[MG]$'
+
+# Check concurrency level
+if [ "$concurrency" = "50-500" ]; then
+    default_concurrent_users="50 100 150 300 500"
+elif [ "$concurrency" = "500-3000" ]; then
+    default_concurrent_users="500 1000 1500 2000 2500 3000"
+else
+    default_concurrent_users="50 100 150 300 500 1000 1500 2000 2500 3000"
+fi
 
 if [[ -z $test_duration ]]; then
     echo "Please provide the test duration."
@@ -221,6 +241,13 @@ fi
 if ! [[ $jmeter_client_heap_size =~ $heap_regex ]]; then
     echo "Please specify a valid heap for JMeter Client."
     exit 1
+fi
+
+# Check if the variable is true
+if [ "$enable_burst" = true ]; then
+    burstTraffic=3000
+else
+    burstTraffic=0
 fi
 
 declare -ag heap_sizes_array
@@ -536,7 +563,7 @@ function test_scenarios() {
                 mkdir -p "$report_location"
 
                 time=$(expr "$test_duration" \* 60)
-                declare -ag jmeter_params=("concurrency=$users" "time=$time" "host=$lb_host" "-Jport=$is_port" "noOfNodes=$noOfNodes")
+                declare -ag jmeter_params=("concurrency=$users" "time=$time" "host=$lb_host" "-Jport=$is_port" "noOfNodes=$noOfNodes" "noOfBurst=$burstTraffic")
 
                 local tenantMode=${scenario[tenantMode]}
                 if [ "$tenantMode" = true ]; then
@@ -545,7 +572,7 @@ function test_scenarios() {
 
                 before_execute_test_scenario
 
-                export JVM_ARGS="-Xms$jmeter_client_heap_size -Xmx$jmeter_client_heap_size -XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:$report_location/jmeter_gc.log $JMETER_JVM_ARGS"
+                export JVM_ARGS="-Xms$jmeter_client_heap_size -Xmx$jmeter_client_heap_size  -Xloggc:$report_location/jmeter_gc.log $JMETER_JVM_ARGS"
 
                 local jmeter_command="jmeter -n -t $script_dir/$jmx_file"
                 for param in "${jmeter_params[@]}"; do
